--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="downloadJsonBtn">Download Text File</button>
+    <button id="firstWay">firstWay Download Text File</button>
+
+    <button id="secoundway">secoundway Download Text File</button>
     <script src="js/script.js"></script>
 </body>
 </html>
