--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <button id="firstWay">firstWay Download Text File</button>
 
     <button id="secoundway">secoundway Download Text File</button>
+    <form action="#">
+        <label for="jsonFileInput">readJsonFile</label>
+        <input type="file" id="jsonFileInput" accept=".json" />
+    </form>
+
     <script src="js/script.js"></script>
 </body>
 </html>
